--- a/.github/workflows/backend-api-ci.yml
+++ b/.github/workflows/backend-api-ci.yml
@@ -21,6 +21,10 @@ jobs:
   backend-api-tests:
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        python-version: ["3.10", "3.11", "3.12"]
+
     env:
       DATABASE_URL: sqlite+aiosqlite:///./test.db
       MASTER_BOT_TOKEN: "123456789:AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
@@ -32,7 +36,7 @@ jobs:
 
       - uses: actions/setup-python@v5
         with:
-          python-version: "3.12"
+          python-version: ${{ matrix.python-version }}
 
       - name: Install deps
         run: |
