--- a/.github/workflows/master-ci.yml
+++ b/.github/workflows/master-ci.yml
@@ -19,6 +19,10 @@ jobs:
   master-tests:
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        python-version: ["3.10", "3.11", "3.12"]
+
     env:
       DATABASE_URL: sqlite+aiosqlite:///./test.db
       MASTER_BOT_TOKEN: "123456789:AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
@@ -31,7 +35,7 @@ jobs:
 
       - uses: actions/setup-python@v5
         with:
-          python-version: "3.12"
+          python-version: ${{ matrix.python-version }}
 
       - name: Install deps
         run: |
