fix monitor and exp token bots

--- a/.env-example
+++ b/.env-example
@@ -35,3 +35,6 @@ export DATABASE_URL=postgresql://gh_user:gh_password_change_me@localhost:5432/gr
 # Single Tenant Mode. 0 - Off, 1 - On
 export GRACEHUB_SINGLE_TENANT_OWNER_ONLY=0
 export GRACEHUB_OWNER_TELEGRAM_ID=
+
+# Monitor 10 mins
+export WORKER_MONITOR_INTERVAL=600
