--- a/.env-example
+++ b/.env-example
@@ -38,3 +38,6 @@ export GRACEHUB_OWNER_TELEGRAM_ID=
 
 # Monitor 10 mins
 export WORKER_MONITOR_INTERVAL=600
+
+# Cron job
+export BILLING_CRON_INTERVAL=3600
