add limits antiflood

--- a/.env-example
+++ b/.env-example
@@ -44,3 +44,6 @@ export BILLING_CRON_INTERVAL=3600
 
 # Size files
 export WORKER_MAX_FILE_MB=50
+
+# Antiflood
+export ANTIFLOOD_MAX_USER_MESSAGES_PER_MINUTE=30
