добавлена оплата в ton, но нужны еще тесты

--- a/.env-example
+++ b/.env-example
@@ -47,3 +47,24 @@ export WORKER_MAX_FILE_MB=50
 
 # Antiflood
 export ANTIFLOOD_MAX_USER_MESSAGES_PER_MINUTE=30
+
+# Для TESTNET (разработка и тестирование)
+export TON_NETWORK=testnet
+export TON_WALLET_ADDRESS=0QAbc123...  # Твой testnet кошелек (начинается с 0Q или kQ)
+export TON_API_BASE_URL=https://testnet.toncenter.com/api/v2
+export TON_API_KEY=  # Получить на @tonapibot в Telegram для testnet
+
+# Для MAINNET (боевая сеть) - закомментируй пока не готов к проду
+# TON_NETWORK=mainnet
+# TON_WALLET_ADDRESS=UQAbc123...  # Твой mainnet кошелек (начинается с UQ/EQ)
+# TON_API_BASE_URL=https://toncenter.com/api/v2/jsonRPC
+# TON_API_KEY=  # Получить на @tonapibot в Telegram для mainnet
+
+# Настройки проверки транзакций
+export TON_CHECK_DELAY_SECONDS=5  # Интервал опроса транзакций
+export TON_CONFIRMATIONS_REQUIRED=1  # Минимум подтверждений (для testnet 1 достаточно)
+
+# Курсы для конвертации (опционально, если не хранишь в БД)
+export TON_PRICE_PER_PERIOD_LITE=0.5  # TON за Lite период (30 дней)
+export TON_PRICE_PER_PERIOD_PRO=2.0   # TON за Pro период
+export TON_PRICE_PER_PERIOD_ENTERPRISE=5.0  # TON за Enterprise период
