добавлена Юkassa как метод оплаты

--- a/.env-example
+++ b/.env-example
@@ -48,6 +48,8 @@ export WORKER_MAX_FILE_MB=50
 # Antiflood
 export ANTIFLOOD_MAX_USER_MESSAGES_PER_MINUTE=30
 
+
+## TON INTEGRATION##
 # Для TESTNET (разработка и тестирование)
 export TON_NETWORK=testnet
 export TON_WALLET_ADDRESS=0QAbc123...  # Твой testnet кошелек (начинается с 0Q или kQ)
@@ -68,3 +70,11 @@ export TON_CONFIRMATIONS_REQUIRED=1  # Минимум подтверждений
 export TON_PRICE_PER_PERIOD_LITE=0.5  # TON за Lite период (30 дней)
 export TON_PRICE_PER_PERIOD_PRO=2.0   # TON за Pro период
 export TON_PRICE_PER_PERIOD_ENTERPRISE=5.0  # TON за Enterprise период
+####
+
+
+## Yookassa integration
+export YOOKASSA_SHOP_ID = 132296
+export YOOKASSA_SECRET_KEY = test_2kgeoJcXC5tXmDZvjpF7hnpWXJB1rWa9mxY1CPgHyJc
+export YOOKASSA_RETURN_URL =
+export YOOKASSA_TEST_MODE = True
