обновил .env-example

--- a/.env-example
+++ b/.env-example
@@ -2,79 +2,85 @@
 # Copy this file to .env and customize
 
 # Master Bot Configuration
-export MASTER_BOT_TOKEN=YOU_TOKEN
-export WEBHOOK_DOMAIN=example.ru
-export WEBHOOK_PORT=9443
+MASTER_BOT_TOKEN=YOU_TOKEN
+WEBHOOK_DOMAIN=example.ru
+WEBHOOK_PORT=9443
 
 # Security
-export ENCRYPTION_KEY_FILE=data/master_key.key
+ENCRYPTION_KEY_FILE=data/master_key.key
 
 # Rate Limiting
-export GLOBAL_RATE_LIMIT=30
-export CHAT_RATE_LIMIT=20
+GLOBAL_RATE_LIMIT=30
+CHAT_RATE_LIMIT=20
 
 # Instance limits
-export MAX_INSTANCES_PER_USER=5
+MAX_INSTANCES_PER_USER=5
 
 # Auto-close tickets (hours)
-export AUTO_CLOSE_HOURS=12
+AUTO_CLOSE_HOURS=12
 
 # Logging
-export LOG_LEVEL=INFO
+LOG_LEVEL=INFO
 
 # Optional: Metrics
-export ENABLE_METRICS=false
-export METRICS_PORT=9090
+ENABLE_METRICS=false
+METRICS_PORT=9090
 
 # for debug Optional
-export WORKER_INSTANCE_ID=
-export WORKER_TOKEN=
+WORKER_INSTANCE_ID=
+WORKER_TOKEN=
 
-export DATABASE_URL=postgresql://gh_user:gh_password_change_me@localhost:5432/gracehub
+DATABASE_URL=postgresql://gh_user:gh_password_change_me@localhost:5432/gracehub
 
 # Single Tenant Mode. 0 - Off, 1 - On
-export GRACEHUB_SINGLE_TENANT_OWNER_ONLY=0
-export GRACEHUB_OWNER_TELEGRAM_ID=
+GRACEHUB_SINGLE_TENANT_OWNER_ONLY=0
+GRACEHUB_OWNER_TELEGRAM_ID=
 
-# Monitor 10 mins
-export WORKER_MONITOR_INTERVAL=600
+# Monitor interval (seconds)
+WORKER_MONITOR_INTERVAL=60
 
-# Cron job
-export BILLING_CRON_INTERVAL=3600
+# Cron job interval (seconds)
+BILLING_CRON_INTERVAL=3600
 
-# Size files
-export WORKER_MAX_FILE_MB=50
+# Size files (MB)
+WORKER_MAX_FILE_MB=50
 
 # Antiflood
-export ANTIFLOOD_MAX_USER_MESSAGES_PER_MINUTE=30
+ANTIFLOOD_MAX_USER_MESSAGES_PER_MINUTE=30
 
 
 ## TON INTEGRATION##
-# Для TESTNET (разработка и тестирование)
-export TON_NETWORK=testnet
-export TON_WALLET_ADDRESS=0QAbc123...  # Твой testnet кошелек (начинается с 0Q или kQ)
-export TON_API_BASE_URL=https://testnet.toncenter.com/api/v2
-export TON_API_KEY=  # Получить на @tonapibot в Telegram для testnet
+# For TESTNET (development and testing)
+TON_NETWORK=testnet
+TON_WALLET_ADDRESS=0QAbc123...
+TON_API_BASE_URL=https://testnet.toncenter.com/api/v2
+TON_API_KEY=
 
-# Для MAINNET (боевая сеть) - закомментируй пока не готов к проду
+# For MAINNET (production network) - uncomment when ready for production
 # TON_NETWORK=mainnet
-# TON_WALLET_ADDRESS=UQAbc123...  # Твой mainnet кошелек (начинается с UQ/EQ)
+# TON_WALLET_ADDRESS=UQAbc123...
 # TON_API_BASE_URL=https://toncenter.com/api/v2/jsonRPC
-# TON_API_KEY=  # Получить на @tonapibot в Telegram для mainnet
+# TON_API_KEY=
 
-# Настройки проверки транзакций
-export TON_CHECK_DELAY_SECONDS=5  # Интервал опроса транзакций
-export TON_CONFIRMATIONS_REQUIRED=1  # Минимум подтверждений (для testnet 1 достаточно)
+# Transaction verification settings
+TON_CHECK_DELAY_SECONDS=5
+TON_CONFIRMATIONS_REQUIRED=1
 
-# Курсы для конвертации (опционально, если не хранишь в БД)
-export TON_PRICE_PER_PERIOD_LITE=0.5  # TON за Lite период (30 дней)
-export TON_PRICE_PER_PERIOD_PRO=2.0   # TON за Pro период
-export TON_PRICE_PER_PERIOD_ENTERPRISE=5.0  # TON за Enterprise период
+# Pricing for plan conversion (optional, if not stored in DB)
+TON_PRICE_PER_PERIOD_LITE=0.5
+TON_PRICE_PER_PERIOD_PRO=2.0
+TON_PRICE_PER_PERIOD_ENTERPRISE=5.0
 ####
 
 
 ## Yookassa integration
-export YOOKASSA_SHOP_ID = 132296
-export YOOKASSA_SECRET_KEY = test_2kgeoJcXC5tXmDZvjpF7hnpWXJB1rWa9mxY1CPgHyJc
-export YOOKASSA_RETURN_URL =
-export YOOKASSA_TEST_MODE = True
+YOOKASSA_SHOP_ID=1132296
+YOOKASSA_SECRET_KEY=test_YOUR_SECRET_KEY_HERE
+YOOKASSA_RETURN_URL=https://gracehub.ru/vite-dev/#/billing
+YOOKASSA_TEST_MODE=true
+
+# Yookassa pricing (RUB)
+YOOKASSA_PRICE_RUB_LITE=199
+YOOKASSA_PRICE_RUB_PRO=499
+YOOKASSA_PRICE_RUB_ENTERPRISE=1999
+
