--- a/.env-example
+++ b/.env-example
@@ -30,7 +30,7 @@ METRICS_PORT=9090
 WORKER_INSTANCE_ID=
 WORKER_TOKEN=
 
-DATABASE_URL=postgresql://gh_user:gh_password_change_me@localhost:5432/gracehub
+DATABASE_URL=postgresql://user:password@localhost:5432/gracehub
 
 # Single Tenant Mode. 0 - Off, 1 - On
 GRACEHUB_SINGLE_TENANT_OWNER_ONLY=0
@@ -76,7 +76,7 @@ TON_PRICE_PER_PERIOD_ENTERPRISE=5.0
 ## Yookassa integration
 YOOKASSA_SHOP_ID=1132296
 YOOKASSA_SECRET_KEY=test_YOUR_SECRET_KEY_HERE
-YOOKASSA_RETURN_URL=https://gracehub.ru/vite-dev/#/billing
+YOOKASSA_RETURN_URL=https://site.ru/vite-dev/#/billing
 YOOKASSA_TEST_MODE=true
 
 # Yookassa pricing (RUB)
