правки для уÑenv-example

--- a/.env-example
+++ b/.env-example
@@ -76,7 +76,7 @@ TON_PRICE_PER_PERIOD_ENTERPRISE=5.0
 ## Yookassa integration
 YOOKASSA_SHOP_ID=1132296
 YOOKASSA_SECRET_KEY=test_YOUR_SECRET_KEY_HERE
-YOOKASSA_RETURN_URL=https://site.ru/vite-dev/#/billing
+YOOKASSA_RETURN_URL=https://site.ru/app/#/billing
 YOOKASSA_TEST_MODE=true
 
 # Yookassa pricing (RUB)
