дÐпÑереписал коннекторÑ Ñк баБД

--- a/.env-example
+++ b/.env-example
@@ -30,7 +30,12 @@ METRICS_PORT=9090
 WORKER_INSTANCE_ID=
 WORKER_TOKEN=
 
-DATABASE_URL=postgresql://user:password@localhost:5432/gracehub
+# DB connectors
+DB_USER=gh_user
+DB_PASSWORD=7qw8LD{{@F~Hdi*
+DB_HOST=localhost
+DB_PORT=5432
+DB_NAME=gracehub
 
 # Single Tenant Mode. 0 - Off, 1 - On
 GRACEHUB_SINGLE_TENANT_OWNER_ONLY=0
