--- a/.env-example
+++ b/.env-example
@@ -32,7 +32,7 @@ WORKER_TOKEN=
 
 # DB connectors
 DB_USER=gh_user
-DB_PASSWORD=7qw8LD{{@F~Hdi*
+DB_PASSWORD=YOU_PASS
 DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=gracehub
