--- a/.env-example
+++ b/.env-example
@@ -5,6 +5,7 @@
 MASTER_BOT_TOKEN=YOU_TOKEN
 WEBHOOK_DOMAIN=example.ru
 WEBHOOK_PORT=9443
+MINIAPP_BASE_URL=https://site.ru
 
 # Security
 ENCRYPTION_KEY_FILE=data/master_key.key
