--- a/tests/schemathesis.toml
+++ b/tests/schemathesis.toml
@@ -21,8 +21,21 @@ include-path = "/api/billing/ton/status"
 enabled = false
 
 # Отключаем по exact "operation name" (метод + путь)
-# (это замена вашему --exclude-path-regex "^/api/invoices/stripe/.+/cancel$")
 [[operations]]
 include-name = "POST /api/invoices/stripe/{invoice_id}/cancel"
+enabled = false
+
+# --- Убираем "admin" ручки, которые стабильно 403 (missing_auth warning) ---
+
+[[operations]]
+include-path = "/api/platform/single-tenant"
+enabled = false
+
+[[operations]]
+include-path = "/api/platform/superadmins"
+enabled = false
+
+[[operations]]
+include-path = "/manage/health"
 enabled = false
 
