--- a/.env-example
+++ b/.env-example
@@ -39,3 +39,6 @@ DB_NAME=gracehub
 WORKER_MONITOR_INTERVAL=60
 # Cron job interval (seconds)
 BILLING_CRON_INTERVAL=3600
+
+# SuperAdmin first set
+GRACEHUB_SUPERADMIN_TELEGRAM_ID=YOU_ID_TG
