--- a/.env-example
+++ b/.env-example
@@ -42,3 +42,6 @@ BILLING_CRON_INTERVAL=3600
 
 # SuperAdmin first set
 GRACEHUB_SUPERADMIN_TELEGRAM_ID=YOU_ID_TG
+
+# Queque
+QUEUE_WORKER_REPLICAS=5
