--- a/frontend/miniapp_frontend/package.json
+++ b/frontend/miniapp_frontend/package.json
@@ -16,6 +16,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-i18next": "^16.4.1",
+    "react-icons": "^5.5.0",
     "vaul": "^1.1.2"
   },
   "devDependencies": {
