--- a/frontend/miniapp_frontend/package.json
+++ b/frontend/miniapp_frontend/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^19.2.0",
     "react-i18next": "^16.4.1",
     "react-icons": "^5.5.0",
+    "recharts": "^3.6.0",
     "vaul": "^1.1.2"
   },
   "devDependencies": {
