--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -1,4 +1,4 @@
-FROM python:3.12-slim
+FROM mirror.gcr.io/library/python:3.12-slim
 
 # PostgreSQL deps
 RUN apt-get update && apt-get install -y \
@@ -20,7 +20,7 @@ ENV APP_BASE_DIR=/app
 ENV PYTHONUNBUFFERED=1
 
 # === TARGETS ===
-FROM python:3.12-slim AS queue-worker
+FROM mirror.gcr.io/library/python:3.12-slim AS queue-worker
 RUN apt-get update && apt-get install -y libpq-dev gcc g++ curl && rm -rf /var/lib/apt/lists/*
 WORKDIR /app/src
 COPY requirements.txt ../
@@ -31,7 +31,7 @@ ENV APP_BASE_DIR=/app
 ENV PYTHONUNBUFFERED=1
 CMD ["python", "queue_worker.py"]
 
-FROM python:3.12-slim AS api
+FROM mirror.gcr.io/library/python:3.12-slim AS api
 RUN apt-get update && apt-get install -y libpq-dev gcc g++ curl && rm -rf /var/lib/apt/lists/*
 WORKDIR /app/src
 COPY requirements.txt ../
@@ -43,7 +43,7 @@ ENV PYTHONUNBUFFERED=1
 EXPOSE 8001
 CMD ["bash", "-c", "python -u -m master_bot.api_server"]
 
-FROM python:3.12-slim AS master-bot
+FROM mirror.gcr.io/library/python:3.12-slim AS master-bot
 RUN apt-get update && apt-get install -y libpq-dev gcc g++ curl && rm -rf /var/lib/apt/lists/*
 WORKDIR /app/src
 COPY requirements.txt ../
@@ -55,7 +55,7 @@ ENV PYTHONUNBUFFERED=1
 EXPOSE 9443
 CMD ["bash", "-c", "python -u -m master_bot.main"]
 
-FROM python:3.12-slim AS user-worker
+FROM mirror.gcr.io/library/python:3.12-slim AS user-worker
 RUN apt-get update && apt-get install -y libpq-dev gcc g++ curl && rm -rf /var/lib/apt/lists/*
 WORKDIR /app/src
 COPY requirements.txt ../
