--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -25,6 +25,6 @@ ENV NODE_OPTIONS="--max-old-space-size=512"
 
 EXPOSE 5173
 
-# Запустить Vite dev server с host 0.0.0.0
+# ЗЗапустить Vite dev server с host 0.0.0.0
 CMD ["npm", "run", "dev", "--", "--host", "0.0.0.0"]
 
