--- a/.env-example
+++ b/.env-example
@@ -1,47 +1,57 @@
-# GraceHub Platform Environment Variables
-# Copy this file to .env and customize
+# .env-example
 
-# Master Bot Configuration
-MASTER_BOT_TOKEN=YOU_TOKEN
-WEBHOOK_DOMAIN=example.ru
+# Основные настройки бота
+MASTER_BOT_TOKEN=your_master_bot_token_here
+
+# Webhook настройки
+WEBHOOK_DOMAIN=your_domain_here
 WEBHOOK_PORT=9443
-MINIAPP_BASE_URL=https://site.ru
+MINIAPP_BASE_URL=https://your_app_url_here
 
-# Rate Limiting
+# Шифрование
+ENCRYPTION_KEY_FILE=master_key.key
+
+# Лимиты
 GLOBAL_RATE_LIMIT=30
 CHAT_RATE_LIMIT=20
-
-# Instance limits
 MAX_INSTANCES_PER_USER=5
-
-# Auto-close tickets (hours)
 AUTO_CLOSE_HOURS=12
 
-# Logging
+# Логирование
 LOG_LEVEL=INFO
 
-# Optional: Metrics
+# Метрики
 ENABLE_METRICS=false
 METRICS_PORT=9090
 
-# for debug Optional
-WORKER_INSTANCE_ID=
-WORKER_TOKEN=
+# Worker настройки
+WORKER_INSTANCE_ID=your_worker_instance_id_here
+WORKER_TOKEN=your_worker_token_here
 
-# DB connectors
+# База данных
 DB_USER=gh_user
-DB_PASSWORD=YOU_PASS
-DB_HOST=localhost
+DB_PASSWORD=ghJh56U65ny567uj65656u6
+DB_HOST=db
 DB_PORT=5432
 DB_NAME=gracehub
 
-# Monitor interval (seconds)
+# Интервалы мониторинга
 WORKER_MONITOR_INTERVAL=60
-# Cron job interval (seconds)
 BILLING_CRON_INTERVAL=3600
 
-# SuperAdmin first set
-GRACEHUB_SUPERADMIN_TELEGRAM_ID=YOU_ID_TG
+# Администратор
+GRACEHUB_SUPERADMIN_TELEGRAM_ID=your_superadmin_telegram_id_here
 
-# Queque
-QUEUE_WORKER_REPLICAS=5
+# Очереди
+QUEUE_WORKER_REPLICAS=2
+
+# Paths
+APP_BASE_DIR=/app
+LOGS_DIR=/app/logs
+
+# autoclean DB
+CLEANUP_INTERVAL_HOURS=6        # Запуск очистки каждые N часов
+CLEANUP_DONE_DAYS=7             # Удалять done через N дней
+CLEANUP_DEAD_DAYS=30            # Удалять dead через N дней
+CLEANUP_STALE_DAYS=3            # Удалять старые pending/retry через N дней
+REQUEUE_STUCK_MINUTES=5         # Реквеить processing через N минут
