--- a/.gitignore
+++ b/.gitignore
@@ -69,7 +69,7 @@ docs/
 compose-down.sh
 mkdocs.yml
 11
-frontend/miniapp_frontend/node_modules/
+frontend/node_modules/
 deploy_git.sh
 scripts/
 examples/
