--- a/frontend-miniapp/package.json
+++ b/frontend-miniapp/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-visually-hidden": "^1.2.4",
     "@twa-dev/sdk": "^8.0.2",
     "flag-icons": "^7.5.0",
     "i18next": "^25.7.2",
