--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -8,6 +8,10 @@ on:
 jobs:
   security:
     runs-on: ubuntu-latest
+    permissions:
+      security-events: write
+      actions: read
+      contents: read
     steps:
       - uses: actions/checkout@v4
       
@@ -28,6 +32,6 @@ jobs:
         run: npm audit --audit-level=high --omit=dev
       
       - name: Bandit
-        uses: PyCQA/bandit-action@master
+        uses: PyCQA/bandit-action@v1
         continue-on-error: true
 
